--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Kurbanov Bulat <kurbanovbul@gmail.com>"]
 python = "^3.9"
 aiogram = {version = "2.18", extras = ["speedups"]}
 httpx = "0.21.3"
+sentry-sdk = "^1.5.10"
+pydantic = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 
