--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Kurbanov Bulat <kurbanovbul@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 aiogram = {version = "2.18", extras = ["speedups"]}
-httpx = "0.21.3"
+httpx = ">=0.23.0"
 sentry-sdk = "^1.5.10"
 pydantic = "^1.9.0"
 
